--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -188,6 +188,7 @@ $app_bgc: #f4f4f4;
 .it_footer .iconbtn { width: .5rem; text-align: center; color: #666; }
 .it_footer .iconbtn .iconfont { font-size: 18px; }
 .it_footer .iconbtn .name { font-size: 10px; margin-top: 3px; }
+.it_footer .cartNum { position: absolute; right: 0; top: 0; background-color: #f23030; color: #fff; font-size: 10px; border-radius: 12px; height: 13px; line-height: 10px; padding: 1px 4px; }
 .it_footer .btnwrap { height: 100%; }
 .it_footer .btn_cart, .it_footer .btn_buy { background-image: linear-gradient(90deg,#ffca28,#ffa001 98%); width: 100%; height: 100%; color: #fff; font-size: 16px; }
 .it_footer .btn_buy { background-image: linear-gradient(90deg,#ff4700,#f23030); }
@@ -317,6 +318,7 @@ $app_bgc: #f4f4f4;
 
 /* 地址选择*/
 .adr_district_select_hd { height: 40px; }
+.adr_district_select_hd .icon-back { padding: 10px 8px; font-size: 18px; }
 .adr_district_select_hd .icon-close { padding: 12px 8px; }
 .adr_district_select_result { height: 35px; font-size: 14px; padding-left: 10px; }
 .adr_district_select_result > div { margin-right: 15px; height: 35px; line-height: 35px; }
@@ -324,3 +326,9 @@ $app_bgc: #f4f4f4;
 .adr_district_select_list { height: 400px; position: relative; }
 .adr_district_select_list_item { height: 35px; line-height: 30px; font-size: 13px; padding-left: 10px; }
 .adr_district_select_list_item.curr { color: #f23030 }
+
+.adr_address_select_item { padding: 10px 10px 10px 6px; font-size: 14px; margin-left: 6px; }
+.adr_address_select_item.selected { color: #f23030; font-weight: bold; }
+.adr_address_select_item::after { border-color: #eee; }
+.adr_address_select_item .con { padding-left: 5px; }
+.adr_address_select_ft { height: 50px; padding: 8px 10px; }
