--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -72,6 +72,15 @@ $app_bgc: #f4f4f4;
 
 地址列表
 .adl_ {}
+
+用户中心（我的）
+.uc_ {}
+
+用户设置
+.us_ {}
+
+编辑用户信息
+.ue_ {}
 */
 
 /* 登录 */
@@ -83,6 +92,16 @@ $app_bgc: #f4f4f4;
 
 .lo_login_footer { margin: 35px 15px 0 15px; }
 .lo_login_btn { @extend .app-button-gradient; }
+
+/* 用户中心（我的） */
+.uc_header { background-color: transparent; }
+.uc_header::after { border: none; }
+.uc_header .app-header-right button { padding: 10px 5px; font-size: 22px; color: #666; }
+.uc_header .app-header-right button:first-child { padding-left: 10px; }
+.uc_header .app-header-right button:last-child { padding-right: 10px; }
+
+/* 用户设置 */
+.us_to_edit {}
 
 /* 商详页 */
 .it_main .app-scroller-container { padding-bottom: 10px; }
@@ -353,7 +372,33 @@ $app_bgc: #f4f4f4;
 .op_footer + .app-main { bottom: 50px; }
 
 /* 订单列表 */
-.ol_tabs .app-tab-head { font-size: 12px; }
+.ol_header::after { display: none; }
+.ol_tabs .app-tab-head { font-size: 12px; height: 40px; }
+.ol_tabs .app-tab-body { top: 40px; }
+.ol_orderlist { background: #f4f4f4; }
+.ol_orderlist_item { background: #fff; margin-bottom: 10px; }
+.ol_seller_order::after { border-color: #eee; }
+.ol_seller { font-size: 14px; height: 35px; padding: 0 10px; }
+.ol_seller .logo { height: 20px; width: 20px; margin: 0 10px 0 0; }
+.ol_seller .status { font-size: 12px; color: #f23030; }
+.ol_seller_skus { padding: 10px; background: #fcfcfc; }
+.ol_seller_sku { margin-bottom: 8px; }
+.ol_seller_sku:last-child { margin-bottom: 0; }
+.ol_seller_sku .pic { width: 70px; height: 70px; margin-right: 10px; }
+.ol_seller_sku .title { font-size: 14px; max-height: 36px; line-height: 18px; }
+.ol_seller_sku .spec { font-size: 12px; color: #999; margin-top: 4px; }
+.ol_seller_sku .num { font-size: 12px; color: #999; }
+.ol_seller_sku .price { font-size: 14px; }
+.ol_seller_sku .price::before { content: '￥'; font-size: 12px; }
+.ol_orderlist_item .summary { height: 32px; line-height: 32px; font-size: 12px; padding-right: 10px; }
+.ol_orderlist_item .summary .amount { font-size: 14px; font-weight: bold; }
+.ol_orderlist_item .summary .amount::before { content: '￥'; font-size: 12px; }
+.ol_orderlist_item .ft { padding: 10px; }
+.ol_orderlist_item .ft::after { border-color: #eee; }
+.ol_orderlist_item .ft button { height: 25px; position: relative; padding: 0 10px; margin-left: 8px; min-width: 80px; }
+.ol_orderlist_item .ft button::after { @include border(#ccc, 25px); }
+.ol_orderlist_item .ft button.primary { color: #f23030; }
+.ol_orderlist_item .ft button.primary::after { border-color: #f23030; }
 
 /* 订单详情 */
 .oi_status { margin-bottom: 10px; padding: 10px; font-size: 14px; background: #fdf0f0; }
