优化购物流程

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -404,7 +404,7 @@ $app_bgc: #f4f4f4;
 .opr_info .total { font-size: 14px; padding-bottom: 5px; color: #999; font-size: 12px; }
 .opr_info .total em { color: #f23030; font-size: 14px; }
 .opr_info .btns { text-align: center; padding: 10px; }
-.opr_info .btns button { height: 28px; width: 80px; margin: 0 6px; }
+.opr_info .btns button { height: 28px; width: 90px; margin: 0 6px; font-size: 13px; }
 .opr_info .btns .btn_order { color: #f23030; }
 .opr_info .btns .btn_order::after { border-color: #f23030; border-radius: 28px; }
 .opr_info .btns .btn_complete { border-radius: 28px; background-image: linear-gradient(90deg,#ff4700,#f23030); color: #fff; }
