--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -91,6 +91,9 @@ $app_bgc: #f4f4f4;
 .ho_footer_btn span { display: block; }
 .ho_footer_btn.curr { color: #f23030; }
 
+.ho_footer ~ .ca_wrap .ca_footer { bottom: 50px; }
+.ho_footer ~ .ca_wrap .ca_footer ~ .app-main { bottom: 100px; }
+
 /* 登录 */
 .lo_header::after { border: none; }
 .lo_form_item { padding: 10px 5px; margin: 15px; }
